--- a/styles/style.css
+++ b/styles/style.css
@@ -3,14 +3,19 @@
   grid-template-columns: repeat(6, 1fr);
 }
 
+.header__menu {
+  grid-column-end: span 3;
+}
+
 .header__links-list {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   list-style: circle;
   gap: 20px;
 }
 
-.header__links-list-item { background:lightblue;}
+.header__links-list-item {}
 .header__links-list-item_no-bullit {
   list-style: none;
 }
