--- a/styles/style.css
+++ b/styles/style.css
@@ -2,13 +2,13 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   align-items: center;
-  min-height: 295px;
-}
-
-.header div {
+  width: 1052px;
+  padding: 92px 24px 0px 24px;
 }
 
 .header__menu {
+  display: flex;
+  justify-content: right;
   grid-column: 1 / span 3;
 }
 
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: row;
   justify-content: right;
-  gap: 30px;
+  gap: 32px;
   list-style: circle;
   padding-right: 40px;
 }
@@ -36,6 +36,7 @@
 }
 
 .header__logo {
+  text-align:left;
   display: inline-block;
   background: yellow;
 }
