--- a/styles/style.css
+++ b/styles/style.css
@@ -46,12 +46,17 @@
 
 .address {
   grid-column: 6 / span 2; /* Adjusted to span columns 6 and 7 */
-  text-align: right;
-  padding-right: 24px; /* Adjust padding to move text */
+  text-align: center;
+  padding-right: 67px; /* Adjust padding to move text */
+  padding-top:7px;
 }
 
 .address a {
   display: block;
+}
+
+.address__address1 {
+  line-height: 0.95em;
 }
 
 .header__address {
