--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
   align-items: center;
   width: 1052px;
   font-style: normal;
-  padding: 92px;
+  /* padding: 92px; */
 }
 
 .header__menu {
@@ -49,4 +49,12 @@
 .address {
   display: flex;
   font-size: 18px;
+  justify-content: right;
+  padding-right: 28px;
+  text-decoration: normal;
+  line-height:24px;
+}
+
+address {
+  font-style: normal;
 }
