--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,7 @@
   text-underline-offset: 4px;
 }
 .header__links-list-item_no-bullit {
+  padding-right: 4px;
   list-style: none;
 }
 
@@ -53,7 +54,7 @@ address {
 
 .address {
   justify-self: end;
-  margin-right: 29px;
+  margin-right: 30px;
   font-size: 18px;
   line-height: 24px;
   text-decoration: normal;
@@ -67,32 +68,26 @@ address {
   text-underline-offset: 4px;
 }
 
-/* cover section */
+/* --------------------------- cover section */
 .cover {
   position: relative;
-  /* display: grid; */
-  /* grid-template-columns: 1fr 1fr 1fr; */
-  /* align-items: end; */
-  /* justify-items: center; */
   z-index: 2;
   margin-top: 92px;
   color: #fff;
   background: url("../images/cover.jpg");
-  background-size: 100%;
-  /* background-size: contain; */
-  /* background-position-x: -85px;
-  background-position-y: 50px; */
-  background-repeat: none;
+  background-position: top left;
+  background-size: cover;
 }
 
 .overlay {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: -1;
   width: 100%;
   height: 100%;
-  /* background: rgba(0, 0, 0, 0.5) */
+  opacity: 0.5;
+  background-color: #000;
 }
 
 .cover__title {
@@ -103,8 +98,9 @@ address {
 }
 
 .aligned-text {
+  z-index: 2;
   display: block;
-  padding-top: 166px;
+  padding-top: 165px;
   padding-left: 50px;
   line-height: 115px;
   text-align: left;
@@ -128,10 +124,35 @@ address {
 }
 
 .cover__description {
+  display: flex;
+  gap: 0px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 135px;
 }
 
 .cover__description-text {
+  /* margin-top: 4px;
+  margin-left: 82px; */
+  padding-left: 82px;
+  display:inline;
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 18px;
 }
 
 .bet-button {
+  width: 256px;
+  height: 51px;
+  font-size: 22px;
+  color: #fff;
+  text-transform: uppercase;
+  background: transparent;
+  border: 1px solid #fff;
+  padding: 10px;
+  margin-right: 50px;
 }
