--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+/* HEADER SECTION */
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
@@ -68,7 +69,7 @@ address {
   text-underline-offset: 4px;
 }
 
-/* --------------------------- cover section */
+/* Cover section */
 .cover {
   position: relative;
   z-index: 2;
@@ -77,6 +78,7 @@ address {
   background: url("../images/cover.jpg");
   background-position: top left;
   background-size: cover;
+  padding-bottom: 24px;
 }
 
 .overlay {
@@ -108,14 +110,14 @@ address {
 
 .aligned-text_center {
   display: block;
-  line-height: 140px;
+  line-height: 84px;
   text-align: center;
 }
 
 .aligned-text_right {
   display: block;
   padding-right: 20px;
-  line-height: 100px;
+  line-height: 95px;
   text-align: right;
 }
 
@@ -129,20 +131,19 @@ address {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 135px;
+  margin-top: 108px;
+  margin-bottom: 27px;
 }
 
 .cover__description-text {
-  /* margin-top: 4px;
-  margin-left: 82px; */
   padding-left: 82px;
-  display:inline;
-  color: #ffffff;
+  display: inline;
+  color: #fff;
   font-weight: 400;
   font-size: 22px;
   line-height: 28px;
   text-transform: uppercase;
-  word-spacing: 18px;
+  word-spacing: 18.2px;
 }
 
 .bet-button {
@@ -156,3 +157,82 @@ address {
   padding: 10px;
   margin-right: 50px;
 }
+
+/* LOTS */
+.lots {
+  padding: 0px 24px 0px 24px;
+}
+
+.lots__heading {
+  /* display: block;
+  font-size: 40px;
+  margin-top: 179px;
+  padding-left: 64px;
+  margin-bottom: 26px; */
+}
+
+.lots__card-list {
+  display: flex;
+  flex-direction: row;
+  /* gap: 24px; */
+  list-style-type: none;
+}
+
+.lots__card-list-item {
+  /* flex-grow: 1; */
+  max-width: 334px;
+  min-height: 563px;
+}
+
+.card-link {
+  display: block;
+  height: 100%;
+  text-decoration: none;
+}
+
+.card {
+  /* position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: space-between;
+  height: 100%;
+  padding: 48px 40px 48px 40px;
+  padding-left: 50px;
+  background-position: top;
+  background-size: cover; */
+}
+
+.card_type_film {
+  background-image: url("../images/card-lot-01.jpg");
+}
+
+.card_type_book {
+  background-image: url("../images/card-lot-02.jpg");
+}
+
+.card_type_picture {
+  background-image: url("../images/card-lot-03.jpg");
+}
+
+.card__title {
+  color: #fff;
+  font-size: 22px;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
+  text-transform: uppercase;
+}
+
+.card__text {
+  color: #fff;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+/* .lots__look-more-link {
+  display:block;
+  font-size:20px;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 5px;
+} */
