--- a/styles/style.css
+++ b/styles/style.css
@@ -76,7 +76,7 @@ address {
   margin-top: 92px;
   color: #fff;
   background: url("../images/cover.jpg");
-  background-position: top left;
+  background-position: center;
   background-size: cover;
   padding-bottom: 24px;
 }
@@ -186,7 +186,7 @@ address {
 .lots__card-list {
   display: flex;
   flex-direction: row;
-  gap: 24px;
+  gap: 25px;
   list-style-type: none;
 }
 
@@ -210,7 +210,7 @@ address {
   align-content: space-between;
   height: 100%;
   padding: 48px 40px 48px 40px;
-  background-position: top;
+  background-position: center;
   background-size: cover;
 }
 
@@ -220,10 +220,13 @@ address {
 
 .card_type_book {
   background-image: url("../images/card-lot-02.jpg");
+  background-size: 100% 50%;
+  background-repeat: no-repeat;
 }
 
 .card_type_picture {
   background-image: url("../images/card-lot-03.jpg");
+  background-position: top 0px right -102px;
 }
 
 .card__title {
