--- a/styles/style.css
+++ b/styles/style.css
@@ -74,11 +74,11 @@ address {
   position: relative;
   z-index: 2;
   margin-top: 92px;
+  padding-bottom: 24px;
   color: #fff;
   background: url("../images/cover.jpg");
   background-position: center;
   background-size: cover;
-  padding-bottom: 24px;
 }
 
 .overlay {
@@ -127,17 +127,17 @@ address {
 
 .cover__description {
   display: flex;
-  gap: 0px;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  gap: 0px;
   margin-top: 108px;
   margin-bottom: 27px;
 }
 
 .cover__description-text {
-  padding-left: 82px;
   display: inline;
+  padding-left: 82px;
   color: #fff;
   font-weight: 400;
   font-size: 22px;
@@ -149,13 +149,13 @@ address {
 .bet-button {
   width: 256px;
   height: 51px;
-  font-size: 22px;
-  color: #fff;
-  text-transform: uppercase;
-  background: transparent;
+  margin-right: 50px;
   border: 1px solid #fff;
   padding: 10px;
-  margin-right: 50px;
+  color: #fff;
+  font-size: 22px;
+  text-transform: uppercase;
+  background: transparent;
 }
 
 
@@ -177,10 +177,10 @@ address {
 
 .lots__heading {
   display: block;
-  font-size: 40px;
   margin-top: 180px;
-  padding-left: 40px;
   margin-bottom: 26px;
+  padding-left: 40px;
+  font-size: 40px;
 }
 
 .lots__card-list {
@@ -220,8 +220,6 @@ address {
 
 .card_type_book {
   background-image: url("../images/card-lot-02.jpg");
-  background-size: 100% 50%;
-  background-repeat: no-repeat;
 }
 
 .card_type_picture {
@@ -232,11 +230,11 @@ address {
 .card__title {
   color: #fff;
   font-size: 22px;
+  line-height: 26px;
   text-decoration: underline;
   text-decoration-thickness: 1px;
   text-underline-offset: 3px;
   text-transform: uppercase;
-  line-height: 26px;
 }
 
 .card__text {
@@ -251,3 +249,103 @@ address {
   text-decoration-thickness: 1px;
   text-underline-offset: 5px;
 } */
+
+/* ABOUT */
+.about {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  grid-template-rows: auto auto;
+  margin-top: 235px;
+  padding-right: 24px;
+  padding-left: 24px;
+}
+
+.about__logo {
+  display: flex;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  justify-self: center;
+  justify-content: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-color: #000;
+  margin-top: 1px;
+}
+
+.about__logo-image {
+  margin-bottom: 1px;
+  align-self: center;
+  width: 148px;
+  height: 114px;
+}
+
+.about__column-text {
+  display: flex;
+  flex-direction: column;
+  grid-area: text;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  gap: 26px;
+  padding: 7px 0px 0px 25px;
+}
+
+.about__title {
+  display: flex;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  align-self: center;
+  padding-top: 7px;
+  padding-left: 25px;
+  color: #000000;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  color: #000000;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+}
+
+/* FOOTER */
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 178px;
+  margin-bottom: 91px;
+  padding: 0px 50px 0px 50px;
+}
+
+.footer__menu {
+  padding-right: 30px;
+}
+
+.footer__menu-link_active {
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.footer__menu-link {
+  font-size: 18px;
+  text-underline-offset: 3px;
+}
+
+.footer__menu-list {
+  text-align: center;
+  list-style-type: none;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 48px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
