--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@ address {
   text-underline-offset: 4px;
 }
 
-/* Cover section */
+/* COVER */
 .cover {
   position: relative;
   z-index: 2;
@@ -79,6 +79,7 @@ address {
   background: url("../images/cover.jpg");
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .overlay {
@@ -159,17 +160,6 @@ address {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
 /* LOTS */
 .lots {
   padding: 0px 24px 0px 24px;
@@ -203,6 +193,7 @@ address {
 }
 
 .card {
+  z-index:1;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -212,10 +203,11 @@ address {
   padding: 48px 40px 48px 40px;
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .card_type_film {
-  background-image: url("../images/card-lot-01.jpg");
+  background-image: url("../images/card-lot-01.png");
 }
 
 .card_type_book {
@@ -223,8 +215,7 @@ address {
 }
 
 .card_type_picture {
-  background-image: url("../images/card-lot-03.jpg");
-  background-position: top 0px right -102px;
+  background-image: url("../images/card-lot-03.png");
 }
 
 .card__title {
@@ -243,12 +234,14 @@ address {
   line-height: 24px;
 }
 
-/* .lots__look-more-link {
-  display:block;
-  font-size:20px;
+.lots__look-more-link {
+  display: block;
+  font-size: 20px;
   text-decoration-thickness: 1px;
   text-underline-offset: 5px;
-} */
+  padding-top: 31px;
+  padding-left: 39px;
+}
 
 /* ABOUT */
 .about {
